# ViteLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: cotire.cmake  vite_lib_dependencies.cmake  vite_lib_files.cmake
source/vite/: config.hpp  defines.hpp  exception.hpp  id.hpp  optional.hpp  string.hpp  variant.hpp
source/vite/concurrency/: task.cpp  task.h  task_id.h
source/vite/config/: config.cpp  config.h
source/vite/exception/: boost_error_detail.cpp  boost_error_detail.h  error_detail.cpp  error_detail.h  exception.cpp  exception.h
source/vite/id/: id.h
source/vite/ioc/: ioc.cpp  ioc.h
source/vite/optional/: optional.h
source/vite/string/: string.cpp  string.h
source/vite/utility/: named_variants.cpp  named_variants.h
source/vite/variant/: case_insenstive_string.h  std_converters.cpp  std_converters.h  variant.cpp  variant.h  variant_converter.cpp  variant_converter.h  variant_default.cpp  variant_default.h  variant_value.h
tests/: CMakeLists.txt  vite_lib_tests.cpp  vite_lib_tests.h
tests/CMake/: vite_lib_test_dependencies.cmake  vite_lib_test_files.cmake
tests/config/: config_tests.cpp  test_ini_writer.cpp  test_ini_writer.h
tests/string/: string_tests.cpp
tests/variant/: bool_variant_tests.cpp  empty_variant_tests.cpp  variant_tests.cpp
